--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<!-- <div id="container"></div> -->
 		</div>
 		<script type="module" src="/src/main.js"></script>
-		
+		<script type="module" src="/src/visualization/visualize_tree.js"></script>
 
 	</body>
 </html>
